overflow fixed

--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .margin-btm-4px {
